--- a/MobileApp.Automation.Tests/Test-Results/ExtentReport.html
+++ b/MobileApp.Automation.Tests/Test-Results/ExtentReport.html
@@ -35,7 +35,7 @@
   <ul class="nav-right">
    <li class="m-r-10"><a href="#"><span class="badge badge-primary">Test Execution Report</span></a></li>
    <li class="m-r-10">
-    <a href="#"><span class="badge badge-primary">09-01-2025 21:49:19</span></a>
+    <a href="#"><span class="badge badge-primary">10-01-2025 22:40:40</span></a>
    </li>
   </ul>
  </div>
@@ -84,9 +84,9 @@
           tag=""
           device="">
           <div class="test-detail">
-            <p class="name">VerifyOutlookEmailLink</p>
+            <p class="name">VerifyOutlookEmail</p>
             <p class="text-sm">
-              <span>21:49:30</span> / <span>35120.12 ms</span>
+              <span>22:40:50</span> / <span>49684.53 ms</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -94,10 +94,10 @@
             <div class="detail-head">
               <div class="p-v-10">
                 <div class="info">
-                  <h5 class="test-status text-pass">VerifyOutlookEmailLink</h5>
-                  <span class='badge badge-success'>09-01-2025 21:49:30</span>
-                  <span class='badge badge-danger'>09-01-2025 21:50:05</span>
-                  <span class='badge badge-default'>35120.12 ms</span>
+                  <h5 class="test-status text-pass">VerifyOutlookEmail</h5>
+                  <span class='badge badge-success'>10-01-2025 22:40:50</span>
+                  <span class='badge badge-danger'>10-01-2025 22:41:40</span>
+                  <span class='badge badge-default'>49684.53 ms</span>
                   &middot; <span class='uri-anchor badge badge-default'>#test-id=1</span>
                   <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
                   <span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
@@ -115,39 +115,51 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>Jan 09 , 2025 21:49:37 a</td>
+        <td>Jan 10 , 2025 22:40:57 a</td>
         <td>
 Clicked on gotIT_button        </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>Jan 09 , 2025 21:49:44 a</td>
+        <td>Jan 10 , 2025 22:41:05 a</td>
         <td>
 Clicked on Add_EmailAddress_link        </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>Jan 09 , 2025 21:49:51 a</td>
+        <td>Jan 10 , 2025 22:41:17 a</td>
         <td>
 Clicked on Add_Outlook_link        </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>Jan 09 , 2025 21:49:58 a</td>
+        <td>Jan 10 , 2025 22:41:24 a</td>
+        <td>
+Clicked on Outlook_userName        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log pass-bg">Pass</span></td>
+        <td>Jan 10 , 2025 22:41:26 a</td>
         <td>
 Entered DummyUser1@outlook.com in Outlook_userName        </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>Jan 09 , 2025 21:50:05 a</td>
+        <td>Jan 10 , 2025 22:41:33 a</td>
+        <td>
+Clicked on Outlook_Next_button        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log pass-bg">Pass</span></td>
+        <td>Jan 10 , 2025 22:41:40 a</td>
         <td>
 Entered DummyPass1 in Outlook_password        </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>Jan 09 , 2025 21:50:05 a</td>
+        <td>Jan 10 , 2025 22:41:40 a</td>
         <td>
-VerifyOutlookEmailLink Passed        </td>
+VerifyOutlookEmail Passed        </td>
       </tr>
   </tbody>
 </table></div>
@@ -171,13 +183,13 @@ VerifyOutlookEmailLink Passed        </td>
     <div class="col-md-3">
       <div class="card"><div class="card-body">
           <p class="m-b-0">Started</p>
-          <h3>09-01-2025 21:49:19</h3>
+          <h3>10-01-2025 22:40:40</h3>
       </div></div>
     </div>
     <div class="col-md-3">
       <div class="card"><div class="card-body">
           <p class="m-b-0">Ended</p>
-          <h3>09-01-2025 21:50:07</h3>
+          <h3>10-01-2025 22:41:42</h3>
       </div></div>
     </div>
     <div class="col-md-3">
@@ -228,7 +240,7 @@ VerifyOutlookEmailLink Passed        </td>
           </div>
         </div>
         <div class="card-footer">
-          <div><small data-tooltip='1%'><b>6</b> events passed</small></div>
+          <div><small data-tooltip='1%'><b>8</b> events passed</small></div>
           <div>
             <small data-tooltip='0%'><b>0</b> events failed, 
             <b data-tooltip='%'>0</b> others
@@ -246,7 +258,7 @@ VerifyOutlookEmailLink Passed        </td>
     </div>
   </div></div>
   <script>
-	var timeline = { "VerifyOutlookEmailLink":35120.1238 };
+	var timeline = { "VerifyOutlookEmail":49684.5298 };
   </script>
   <div class="row">
       <div class="col-md-4 sysenv-container">
@@ -278,12 +290,12 @@ VerifyOutlookEmailLink Passed        </td>
     parentCount: 1,
     childCount: 0,
     grandChildCount: 0,
-    eventsCount: 6,
+    eventsCount: 8,
 
 passParent:1,failParent:0,warningParent:0,skipParent:0,    
 passChild:0,failChild:0,warningChild:0,skipChild:0,infoChild:0,    
 passGrandChild:0,failGrandChild:0,warningGrandChild:0,skipGrandChild:0,infoGrandChild:0,    
-passEvents:6,failEvents:0,warningEvents:0,skipEvents:0,infoEvents:0,  };
+passEvents:8,failEvents:0,warningEvents:0,skipEvents:0,infoEvents:0,  };
 </script>
 
     </div>
